<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_string"/>
        <EditText
            android:id="@+id/school"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/school" />
        <EditText
            android:id="@+id/speciality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/speciality" />
        <EditText
            android:id="@+id/promo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/promo" />
        <EditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city" />
        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>