<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_program"
            android:icon="@drawable/ic_menu_black_24dp"
            android:title="@string/nav_program" />
        <item
            android:id="@+id/nav_plan"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/nav_plan" />
        <item
            android:id="@+id/nav_companies"
            android:icon="@drawable/ic_business_black_24dp"
            android:title="@string/nav_companies" />
    </group>
    <item android:title="Scanner">
        <menu>
            <item
                android:id="@+id/nav_qrcode"
                android:icon="@drawable/ic_qrcode_black_24dp"
                android:title="Code QR"/>
        </menu>
    </item>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_email_black_24dp"
                android:title="Contactez-nous"/>
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/info" />
        </menu>
    </item>

</menu>
